fix weird line break on wide screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1617,3 +1617,9 @@ a[href^="http"] {
     display: none;
   }
 }
+
+@media screen and (min-width: 1622px) {
+  .footer-offer br {
+    display: none;
+  }
+}
